find_package(MPI)
if (MPI_FOUND)
	include_directories(${MPI_INCLUDE_DIRS})
	set(LINK_LIBS "${LINK_LIBS}" "${MPI_LIBRARIES}")
    add_executable(parallel_diffusion parallel_diffusion.cpp)
    target_link_libraries(parallel_diffusion ${LINK_LIBS})
    install(TARGETS parallel_diffusion RUNTIME DESTINATION bin)
endif()
